--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
   "author": "Jonathan Cernero",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.12"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "papaparse": "^5.3.1",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^5.21.1"
+    "react-papaparse": "^3.17.1",
+    "sequelize": "^5.21.1",
+    "uuid": "^3.4.0"
   }
 }
